config/networkpolicies/controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: controller
  namespace: metallb-system
spec:
  podSelector:
    matchLabels:
     app: metallb
     component: controller
  egress:
    - ports:
      - protocol: TCP
        port: 6443
  ingress:
    - ports:
      - protocol: TCP
        port: metricshttps
      - protocol: TCP
        port: webhook-server
  policyTypes:
    - Egress
    - Ingress
